k8s/all-deployment-svc/foxfram-fact-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  fact-deploy
  namespace: default
  labels:
    app: factorial
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: factorial
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: factorial
        version: v1
    spec:
      containers:
      - image:  moficodes/foxfram-factorial:0.0.2
        name:  factorial
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort:  8080
          name: http
      restartPolicy: Always
