k8s/all-deployment-svc/foxfram-fact-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  factorial-service
  labels:
    app: factorial
  namespace: default
spec:
  selector:
    app:  factorial
  ports:
  - name:  http
    port:  80
    targetPort:  8080
